--- a/EmailSendApi/css/style.css
+++ b/EmailSendApi/css/style.css
@@ -155,3 +155,25 @@ body{
 	margin: 3em;
 }
 
+.logOutSection{
+    padding: 1em 0 1em 0;
+}
+
+.logoutBtn{
+    color:#fc8888;
+    border-bottom: 2px solid #fc8888;
+    font-size: 1.1em;
+    text-decoration: none;
+    font-weight: 100;
+}
+
+.logoutBtn:hover{
+    color:#f76767;
+    border-bottom: 2px solid #f76767;
+    font-size: 1.1em;
+    text-decoration: none;
+    font-weight: 100;
+}
+
+
+
