--- a/EmailSendApi/css/style.css
+++ b/EmailSendApi/css/style.css
@@ -13,7 +13,7 @@ body{
 	font-weight: 500;
 	color: #ffffff;
 	margin: 1em 0 0.5em 0;
-    text-shadow: 1px 1px 1px #000;
+    text-shadow: 1px 1px 7px #000;
 }
 
 /* Text message inside the card style */
@@ -88,17 +88,16 @@ body{
 }
 
 .loginCard{
-	padding: 40px 20px;
+	padding: 50px 25px;
     border: 1px solid rgba(54, 64, 74, 0.05);
     -webkit-border-radius: 5px;
-    border-radius: 10px;
     -moz-border-radius: 5px;
     background-clip: padding-box;
     margin-bottom: 20px;
 	background-color: #f9fafc;
 	-webkit-box-shadow: -1px 1px 10px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: -1px 1px 10px 0px rgba(0,0,0,0.75);
-	box-shadow: -1px 1px 10px 0px rgba(0,0,0,0.75);
+	box-shadow: -1px 1px 8px -1px rgba(0,0,0,0.75);
 	min-height: 150px;
 }
 
@@ -258,8 +257,15 @@ body{
 
 
 .signUpLink{
-    color:#506CD8 !important;
+    color:#00ffba !important;
+     text-decoration: underline;
     margin-top: 1em;
+}
+
+.signUpLink:hover{
+   
+     text-decoration: none;
+   
 }
 
 /* Logout button hover styling */
